teams/team-backend/dev/templates/rest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-rest
  labels:
    app: spring-boot-rest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-boot-rest
  template:
    metadata:
      labels:
        app: spring-boot-rest
    spec:
      containers:
      - name: spring-boot-resti
        image: kuramoto/spring-boot-rest
