teams/team-backend/dev/templates/rest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-rest
  labels:
    app: spring-boot-rest
spec:
  type: Loadbalancer
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: spring-boot-rest
